Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
           "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "3104a85c-fa54-11e8-bc41-0242ac110027",
+         "uid": "5e723fcc-f570-11e8-bff7-0242ac11000e",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -422,13 +422,8 @@
          ]
         },
         {
-         "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
-         ],
          "type": "bar",
-         "uid": "3104aadc-fa54-11e8-bc41-0242ac110027",
+         "uid": "5e724512-f570-11e8-bff7-0242ac11000e",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -444,10 +439,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"f2c28b21-ec05-4df9-b42b-a5f65197e617\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f2c28b21-ec05-4df9-b42b-a5f65197e617\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"31084458-fa54-11e8-bc41-0242ac110027\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"31084fb6-fa54-11e8-bc41-0242ac110027\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c39d1438-0138-47b3-99b5-4ffaf11d5f5e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c39d1438-0138-47b3-99b5-4ffaf11d5f5e\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"5e7b5c38-f570-11e8-bff7-0242ac11000e\"}, {\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"5e7b6156-f570-11e8-bff7-0242ac11000e\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"f2c28b21-ec05-4df9-b42b-a5f65197e617\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f2c28b21-ec05-4df9-b42b-a5f65197e617\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"31084458-fa54-11e8-bc41-0242ac110027\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"31084fb6-fa54-11e8-bc41-0242ac110027\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c39d1438-0138-47b3-99b5-4ffaf11d5f5e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c39d1438-0138-47b3-99b5-4ffaf11d5f5e\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"5e7b5c38-f570-11e8-bff7-0242ac11000e\"}, {\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"5e7b6156-f570-11e8-bff7-0242ac11000e\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
